syntax = "proto3";

package client_interface;

service UserRegister {
  rpc CreateUser(User) returns (UserResponse) {}
}

message UserResponse {
  int32 status = 1;
  string msg = 2;
  repeated User data = 3;
}

message User {
  int32 id = 1;
  string user_name = 2;
  string first_name = 3;
  string last_name = 4;
  string password = 5;
  string email = 6;
  string institution = 7;
  string country = 8;
  int32 limit = 9;
}
